# ScenarioParameterCollection

./: .gitignore  LICENSE  README  pyproject.toml
docs/: convergence_methodology.md  erwin_scenario_mapping.md  hazard_detection.md  highd_dataset.md  scenario_catalog.md
src/scenario_parameter_collection/: __init__.py  catalog.py  cli.py  convergence.py  convergence_cli.py  coverage.py  detection.py  highd_loader.py  statistics.py  tagging.py  utils.py  visualization.py
tests/: test_convergence.py  test_detection.py
