[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenario-parameter-collection"
version = "0.1.0"
description = "Highway driving scenario detection and parameter statistics for the HighD dataset."
readme = "README"
authors = [
    {name = "Scenario Research Team"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[tool.setuptools.packages.find]
where = ["src"]
